--- a/login/style.css
+++ b/login/style.css
@@ -1,7 +1,8 @@
 body {
     width: 50px;
     height: 50px;
-    background-image: url(/login/image/netflix.jpg);
+    margin: 0;
+    background-image: url(/image/netflix.jpg);
     background-repeat: no-repeat;
     background-size: 1800px 1280px;
 }
@@ -11,7 +12,16 @@ body {
     height: 1280px;
     padding: 0;
     margin: 0;
+    border: 0;
     background-color: rgba(0, 0, 0, 0.747);
+}
+
+.loginBlock{
+    width: 300px;
+    height: 300px;
+    padding: 0;
+    margin: 0;
+    background-color: rgba(0, 0, 0, 0.575);
 }
 
 h1 {
