--- a/login/style.css
+++ b/login/style.css
@@ -1,29 +1,73 @@
 body {
-    width: 50px;
-    height: 50px;
+    height: 160vh;
     margin: 0;
     background-image: url(/image/netflix.jpg);
     background-repeat: no-repeat;
-    background-size: 1800px 1280px;
+    background-size: cover;
+    font-family: 'Noto Sans KR', sans-serif;
+
+}
+
+.netflixLogo{
+    width: 180px;
+    height: auto;
+    padding: 15px 0 0 20px;
 }
 
 .backBlock {
-    width: 1800px;
-    height: 1280px;
-    padding: 0;
-    margin: 0;
-    border: 0;
+    height: 160vh;
+    position: relative;
     background-color: rgba(0, 0, 0, 0.65);
 }
 
 .loginBlock{
-    width: 300px;
-    height: 300px;
-    padding: 0;
-    margin: 0;
+    width: 350px;
+    height: 600px;
+    color: white;
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    margin: -100px 0 0 -200px;
+    padding: 50px 0 0 60px;
     background-color: rgba(0, 0, 0, 0.7);
+    line-height:100%;
+    border: 1px solid rgb(0, 0, 0, 0.7 );
+    border-radius: 4px;
+    outline: none;
+}
+
+.loginRedBlock{
+    width: 290px;
+	height: 35px;
+    text-align: center;
+    background-color: rgb(235, 0, 0);
+    border: 1px solid rgb(235, 0, 0);
+    padding-top: 15px;
+    border-radius: 4px;
+    outline: none;
+}
+
+input[type = text]{
+    width: 270px;
+	height: 50px;
+	font-size: 15px;
+    color: white;
+    padding: 0 0 0 20px;
+    background-color: rgb(43, 42, 42);
+    border: 1px solid rgb(43, 42, 42 );
+    border-radius: 5px;
+    outline: none;
+}
+
+
+input[type = checkbox]{
+    width: 20px;
+	height: 20px;
+    margin-left: -2px;
+    background-color: #ad1c1c;
 }
 
 h1 {
-    color: rgb(94, 47, 47);
+    
+    color: rgb(255, 255, 255);
 }
