--- a/login/style.css
+++ b/login/style.css
@@ -44,6 +44,7 @@ body {
     border: 1px solid rgb(235, 0, 0);
     padding-top: 15px;
     border-radius: 4px;
+    color: white;
     outline: none;
 }
 
@@ -58,19 +59,42 @@ input[type = text]{
     border-radius: 5px;
     outline: none;
 }
+input[type = password]{
+    width: 270px;
+	height: 50px;
+	font-size: 15px;
+    color: white;
+    padding: 0 0 0 20px;
+    background-color: rgb(43, 42, 42);
+    border: 1px solid rgb(43, 42, 42 );
+    border-radius: 5px;
+    outline: none;
+}
 
-
+label{
+    position: relative;
+    top: -10px;
+}
 input[type = checkbox]{
     display: none;
 }
 input[type = checkbox] + label{
-    padding-left: 40px;
+    padding-left: 21px;
     display: block;
+    color: rgb(148, 148, 148);
     background-repeat: no-repeat;
     background-image: url('/image/checkOff.png');
 }
 input[type = checkbox]:checked + label {
     background-image: url('/image/checkOn.png');
+}
+
+.helpText{
+    color: rgb(148, 148, 148);
+    text-decoration: none;
+}
+a.helpText:hover{
+    text-decoration: underline;
 }
 
 h1 {
